# APP_Wealth_Management_BE

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  ruff.toml  startup.sh
.streamlit/: .gitignore
auto_test/: auto_test_script.py  script.py
docs/: activity.plantuml  insurance-MIL.plantuml  insurance-MIY.plantuml  response_sample.md  sequence_diagram.plantuml  state_diagram.plantuml
performance_tests/: api_test.py  bert_test.py
src/: README.md  app.py  conda_requirements.txt  config.ini  gm_logger.py  logging_intercept_handler.py  requirements.txt  router.py  test.py  tools.py  util.py
src/action/: action.py  action_manager.py  base.py  context.py  df_processor.py  runner.py
src/action_runner/: action.py  base.py  context.py  rag_action.py
src/auto_test/: script.py
src/caches/: base.py  es.py  lancedb.py
src/common/: constant.py
src/conversation_tracker/: base.py  context.py
src/dialog_manager/: base.py
src/elastic_search_manager/: base.py
src/emailbot/: email.py  emailbot.py
src/gm_secrets/: .gitignore  secret.py
src/input_enricher/: base.py
src/llm/: onsite.py  openai_model.py  self_host.py
src/nlu/: base.py  forms.py  intent_config.py  intent_with_entity.py  intent_with_entity_test.py
src/output_adapter/: base.py  email_output_adapter.py
src/policy/: Summarize_products_in_br.py  base.py  general.py  intent_available_checking.py  slot_filling_policy.py
src/policy_manager/: base.py  policy.py
src/prompt_manager/: base.py  local_prompt_service.py
src/promptflow/: command.py
src/reasoner/: base.py  llm_reasoner.py
src/resources/: intent.yaml  intent.yaml.bak  util.py
src/scenario_model_registry/: base.py
src/third_system/: BusinessException.py  atom_service.py  file_validation_report.html  hsbc_connect_api.py  knowledge_base.py  microsoft_graph.py  search_entity.py  unified_search.py
src/tracker/: HistorySummarizer.py  SlidingWindow.py  SummarizeHistory.py  base.py  context.py
src/unified_search_client/: unified_search_client.py
src/utils/: action_helper.py  common.py  data_extractor.py  ppt_helper.py  utils.py
tests/: env.txt.example
tests/action_test/: action_manager_test.py
tests/conversation_tracker_test/: conversation_tracker_test.py
tests/e2e/: copy_conversations_to_fixed_test.py  e2e_cli.py  e2e_log_template.jinja2  e2e_test_generator.py  e2e_test_template.jinja2  e2e_util.py  folder_util.py  generate_fix_test.py  generate_from_golden_test_set.py  generate_log.py  generate_unit_test.py  generating_unit_test_report.py  log_inspector.py  (+9 more)
(+363 files in other folders)
