[tool.poetry]
name = "thought-agent"
version = "0.1.0"
description = ""
authors = ["Dan Chen <dchen@thoughtworks.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default= true

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.7.2"
schedule = "^1.2.1"
parameterized = "0.8.1"
chinese2digits = "^6.0.2"
colorama = "^0.4.6"
openai = "1.3.7"
ruff = "^0.1.9"
black = "^23.12.1"
sse-starlette = "^1.8.2"
fastapi = "0.108.0"
lancedb = "0.4.3"
pymilvus = "2.2.4"
tabulate = "^0.9.0"
python-pptx = "^0.6.23"
gluon-meson-sdk = {git = "ssh://git@github.com/gluon-meson/sdk.git", rev = "hsbc-tb-guru31"}
psycopg-pool = "^3.2.1"
psycopg = "^3.1.18"
greenlet = "^3.0.3"
tiktoken = "^0.6.0"



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
pytest-html = "^4.1.1"
openpyxl = "^3.1.2"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
